--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,26 +1,51 @@
-name: Build EXE
+name: WindowsOptimizer
 
 on:
   push:
-    branches: [ master ]
+    branches:
+      - master
 
 jobs:
-  build-exe:
+  build:
     runs-on: windows-latest
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Install BAT to EXE Converter
-        run: |
-          Invoke-WebRequest -Uri 'https://sourceforge.net/projects/battoexe/files/latest/download' -OutFile 'battoexe.zip'
-          Expand-Archive -Path .\battoexe.zip -DestinationPath .\battoexe
-
-      - name: Convert CMD to EXE
-        run: .\battoexe\battoexeconverter.bat -bat file.cmd -exe file.exe -icon file.ico
-
-      - name: Upload EXE file
-        uses: actions/upload-artifact@v2
+      - name: Install Python
+        uses: actions/setup-python@v2
         with:
-          name: file.exe
-          path: file.exe
+          python-version: '3.9'
+
+      - name: Install dependencies
+        run: |
+          pip install pyinstaller
+
+      - name: Build exe file
+        run: |
+          curl -LJO "https://sourceforge.net/projects/battoexe/files/latest/download"
+          mkdir battoexe
+          tar -xf battoexe.zip -C ./battoexe
+          .\battoexe\battoexeconverter.bat -bat file.cmd -exe file.exe
+
+      - name: Create release
+        id: create_release
+        uses: actions/create-release@v1.0.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.SECRET_TOKEN }}
+        with:
+          tag_name: v1.0.0
+          release_name: Release v1.0.0
+          draft: false
+          prerelease: false
+
+      - name: Upload release asset
+        uses: actions/upload-release-asset@v1.0.2
+        env:
+          GITHUB_TOKEN: ${{ secrets.SECRET_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./file.exe
+          asset_name: file.exe
+          asset_content_type: application/octet-stream
