--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,51 +1,52 @@
-name: WindowsOptimizer
-
-on:
-  push:
-    branches:
-      - master
-
-jobs:
-  build:
-    runs-on: windows-latest
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Install Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.9'
-
-      - name: Install dependencies
-        run: |
-          pip install pyinstaller
-
-      - name: Build exe file
-        run: |
-          curl -LJO "https://sourceforge.net/projects/bat-to-exe-converter/files/latest/download"
-          mkdir battoexe
-          tar -xf JET-R.zip -C ./battoexe
-          .\battoexe\JET-R\JET.exe -bat file.cmd -exe file.exe
-
-      - name: Create release
-        id: create_release
-        uses: actions/create-release@v1.0.0
-        env:
-          GITHUB_TOKEN: ${{ secrets.SECRET_TOKEN }}
-        with:
-          tag_name: v1.0.0
-          release_name: Release v1.0.0
-          draft: false
-          prerelease: false
-
-      - name: Upload release asset
-        uses: actions/upload-release-asset@v1.0.2
-        env:
-          GITHUB_TOKEN: ${{ secrets.SECRET_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./file.exe
-          asset_name: file.exe
-          asset_content_type: application/octet-stream
+#name: WindowsOptimizer
+#
+#on:
+#  push:
+#    branches:
+#      - master
+#
+#jobs:
+#  build:
+#    runs-on: windows-latest
+#
+#    steps:
+#      - name: Checkout code
+#        uses: actions/checkout@v2
+#
+#      - name: Install Python
+#        uses: actions/setup-python@v2
+#        with:
+#          python-version: '3.9'
+#
+#      - name: Install dependencies
+#        run: |
+#          pip install pyinstaller
+#
+#      - name: Build exe file
+#        run: |
+#          curl -LJO "https://sourceforge.net/projects/bat-to-exe-converter/files/latest/download"
+#          mkdir battoexe
+#          tar -xf JET-R.zip -C ./
+#          cd JET-R
+#          JET.exe -bat file.cmd -exe file.exe
+#
+#      - name: Create release
+#        id: create_release
+#        uses: actions/create-release@v1.0.0
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.SECRET_TOKEN }}
+#        with:
+#          tag_name: v1.0.0
+#          release_name: Release v1.0.0
+#          draft: false
+#          prerelease: false
+#
+#      - name: Upload release asset
+#        uses: actions/upload-release-asset@v1.0.2
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.SECRET_TOKEN }}
+#        with:
+#          upload_url: ${{ steps.create_release.outputs.upload_url }}
+#          asset_path: ./file.exe
+#          asset_name: file.exe
+#          asset_content_type: application/octet-stream
